add chart api bidhistory api result history api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,12 @@ flutter:
       fonts:
         - asset: assets/fonts/pt_sans/PTSans-Bold.ttf
         - asset: assets/fonts/pt_sans/PTSans-Regular.ttf
+    - family: RobotoSans
+      fonts:
+        - asset: assets/fonts/roboto_sans/Roboto-Bold.ttf
+        - asset: assets/fonts/roboto_sans/Roboto-Medium.ttf
+        - asset: assets/fonts/roboto_sans/Roboto-Regular.ttf
+  
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
