--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.1.11
   share_plus: ^7.0.2
   image_picker: ^1.0.1
+  flutter_pin_code_fields: ^2.2.0
 
 dev_dependencies:
   flutter_test:
