--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   share_plus: ^7.0.2
   image_picker: ^1.0.1
   flutter_pin_code_fields: ^2.2.0
+  flutter_local_notifications: ^15.1.1
+  firebase_messaging: ^14.6.7
+  firebase_core: ^2.15.1
+  firebase_analytics: ^10.4.5
 
 dev_dependencies:
   flutter_test:
