--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   firebase_messaging: ^14.6.7
   firebase_core: ^2.15.1
   firebase_analytics: ^10.4.5
+  permission_handler: ^10.4.3
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
