--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   firebase_analytics: ^10.4.5
   permission_handler: ^10.4.3
   location: ^5.0.3
+  open_app_settings: ^2.0.1
 
 dev_dependencies:
   flutter_test:
