--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   firebase_messaging: ^14.6.7
   firebase_core: ^2.15.1
   firebase_analytics: ^10.4.5
+  permission_handler: ^10.4.3
+  location: ^5.0.3
+  open_app_settings: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +85,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/JSON File/
   #   - images/a_dot_ham.jpeg
