--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,12 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_analytics: ^10.4.5
   permission_handler: ^10.4.3
-  location: ^5.0.3
   open_app_settings: ^2.0.1
+  flutter_background_service: ^5.0.1
+  flutter_background_service_android: ^6.0.1
+  flutter_foreground_task: ^6.1.2
+  geolocator: ^10.0.1
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
