--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,12 +57,11 @@ dependencies:
   flutter_local_notifications: ^15.1.1
   firebase_messaging: ^14.6.7
   firebase_core: ^2.15.1
-  firebase_analytics: ^10.4.5
-  open_app_settings: ^2.0.1
-  geolocator: ^10.0.1
-  geocoding: ^2.1.0
-  flutter_jailbreak_detection: ^1.10.0
+#  geolocator: ^10.0.1
+#  geocoding: ^2.1.0
+#  flutter_jailbreak_detection: ^1.10.0
   unique_identifier: ^0.3.0
+#  ota_update: ^6.0.0
 
 dev_dependencies:
   flutter_test:
