--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.5+5
+version: 1.0.4+4
 # 1.0.5+5
 # 1.1.0+4
 environment:
@@ -61,7 +61,9 @@ dependencies:
 #  geocoding: ^2.1.0
 #  flutter_jailbreak_detection: ^1.10.0
   unique_identifier: ^0.3.0
-#  ota_update: ^6.0.0
+  in_app_update: ^4.2.2
+  upgrader: ^6.5.0
+  ota_update: ^6.0.0
 
 dev_dependencies:
   flutter_test:
