change password flow changes done

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config">
        <provider
            android:name="sk.fourq.otaupdate.OtaUpdateFileProvider"
