--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,32 +2,14 @@ name: spllive
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 2.0.1+1
 # 2.0.0+1  Wed 6 mar
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -36,35 +18,35 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_screenutil: ^5.7.0
-  get: ^4.6.5
-  http: ^0.13.6
+  flutter_screenutil: ^5.9.3
+  get: ^4.7.2
+  http: ^1.3.0
   get_storage: ^2.1.1
   carousel_slider: ^5.0.0
   connectivity_plus: ^4.0.1
-  flutter_svg: ^2.0.5
-  country_list_pick: ^1.0.1+6
+  flutter_svg: ^2.0.17
+#  country_list_pick: ^1.0.1+6
   pin_code_fields: ^8.0.1
-  device_info_plus: ^9.0.2
-  package_info_plus: ^4.0.2
-  intl: ^0.18.1
-  cached_network_image: ^3.2.3
+  device_info_plus: ^11.3.0
+  package_info_plus: ^8.2.1
+  intl: ^0.20.2
+  cached_network_image: ^3.4.1
   flutter_rating_bar: ^4.0.1
-  url_launcher: ^6.1.11
-  share_plus: ^7.0.2
-  image_picker: ^1.0.1
+  url_launcher: ^6.3.1
+  share_plus: ^10.1.4
+  image_picker: ^1.1.2
   flutter_pin_code_fields: ^2.2.0
   flutter_local_notifications: ^18.0.1
-  firebase_messaging: ^14.6.7
-  firebase_core: ^2.15.1
+  firebase_messaging: ^15.2.2
+  firebase_core: ^3.11.0
 #  geolocator: ^10.0.1
 #  geocoding: ^2.1.0
 #  flutter_jailbreak_detection: ^1.10.0
-  unique_identifier: ^0.3.0
-  in_app_update: ^4.2.2
-  upgrader: ^6.5.0
+  unique_identifier: ^0.4.0
+  in_app_update: ^4.2.3
+  upgrader: ^11.3.1
   ota_update: ^6.0.0
-  permission_handler: ^11.3.0
+  permission_handler: ^11.3.1
 #  colorful_safe_area: ^1.0.0
 
 
