--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 2.0.1+1
+version: 1.0.1+1
 
 environment:
   sdk: ^3.6.0
@@ -42,10 +42,14 @@ dependencies:
   #  geocoding: ^2.1.0
   #  flutter_jailbreak_detection: ^1.10.0
   unique_identifier: ^0.4.0
-  in_app_update: ^4.2.3
-  upgrader: ^11.3.1
-  ota_update: ^6.0.0
+#  in_app_update: ^4.2.3
+#  upgrader: ^11.3.1
+#  ota_update: ^6.0.0
   permission_handler: ^11.3.1
+
+  dio: ^5.8.0+1
+  path_provider: ^2.1.5
+  open_filex: ^4.6.0
 #  colorful_safe_area: ^1.0.0
 
 
