--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 2.0.1+1
+version: 1.0.0+1
 
 environment:
   sdk: ^3.6.0
@@ -50,6 +50,7 @@ dependencies:
   dio: ^5.8.0+1
   path_provider: ^2.1.5
   open_filex: ^4.6.0
+#  android_intent_plus: ^5.3.0
 #  colorful_safe_area: ^1.0.0
 
 
