--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   image_picker: ^1.1.2
   flutter_pin_code_fields: ^2.2.0
   flutter_local_notifications: ^18.0.1
-  firebase_messaging: ^15.2.2
-  firebase_core: ^3.11.0
+  firebase_messaging: ^15.2.3
+  firebase_core: ^3.12.0
   #  geolocator: ^10.0.1
   #  geocoding: ^2.1.0
   #  flutter_jailbreak_detection: ^1.10.0
@@ -45,11 +45,11 @@ dependencies:
 #  in_app_update: ^4.2.3
 #  upgrader: ^11.3.1
 #  ota_update: ^6.0.0
-  permission_handler: ^11.3.1
+  permission_handler: ^11.4.0
 
   dio: ^5.8.0+1
   path_provider: ^2.1.5
-  open_filex: ^4.6.0
+#  open_filex: ^4.6.0
 #  android_intent_plus: ^5.3.0
 #  colorful_safe_area: ^1.0.0
 
