--- a/android/key.properties
+++ b/android/key.properties
@@ -1,7 +1,7 @@
-storePassword=123456
-keyPassword=123456
-keyAlias=key0
-storeFile=../app/spl.jks
+storePassword=android
+keyPassword=android
+keyAlias=androiddebugkey
+storeFile=../app/debug.keystore
 
 
 
